plugins {
    id 'java'
    id 'war'
}

group = 'com.jaedaero'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'       // JUnit 5 테스팅 프레임워크
    springVersion = '5.3.39'       // Spring Framework 5.3.x 마지막 버전 (보안 패치 포함)
    lombokVersion = '1.18.38'      // Lombok 라이브러리 최신 버전 (2025년 기준)
    aspectjVersion = '1.9.20.1'    // AspectJ 최신 마이너 버전
    jacksonVersion = '2.12.7'      // Spring 5.3.x와 호환되는 Jackson 최신 안정 버전
    springSecurityVersion = '5.8.15' // Spring Security 버전
}

dependencies {
    // Spring Framework
    implementation "org.springframework:spring-context:${springVersion}"
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    // Spring Security
    implementation "org.springframework.security:spring-security-web:${springSecurityVersion}"
    implementation "org.springframework.security:spring-security-config:${springSecurityVersion}"
    implementation "org.springframework.security:spring-security-oauth2-client:${springSecurityVersion}"

    // 스프링 데이터베이스 지원
    implementation "org.springframework:spring-tx:${springVersion}"

    // 데이터베이스 관련 의존성
    implementation 'com.mysql:mysql-connector-j:9.3.0'     // MySQL JDBC 드라이버
    implementation 'com.zaxxer:HikariCP:3.4.5'             // 커넥션 풀 라이브러리

    // Tomcat 9 / Servlet 4.0
    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'

    // MyBatis
    implementation 'org.mybatis:mybatis:3.5.19'
    implementation 'org.mybatis:mybatis-spring:2.1.2'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j:9.3.0'

    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.1'

    // Logging (SLF4J + Log4j2 console)
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.23.1'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'
    runtimeOnly 'org.apache.logging.log4j:log4j-jcl:2.23.1'

    // Environment variables (.env)
    implementation 'io.github.cdimascio:dotenv-java:3.2.0'

    // API documentation (Spring MVC / non-Boot)
    implementation 'io.springfox:springfox-swagger2:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'

    // Validation (Spring Framework 5 / javax namespace)
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'

    // JSP view rendering
    implementation 'javax.servlet:jstl:1.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    // Test
    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.5'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.5'
    testImplementation 'com.h2database:h2:2.3.232'
    testImplementation "org.springframework:spring-test:${springVersion}"
    testImplementation 'org.hamcrest:hamcrest:2.2'

    // Xerces XML 파서 - XML 내 한글 문자 처리 개선 (안정 버전 유지)
    implementation 'xerces:xercesImpl:2.12.2'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// ---------------------------------------------------------------------------
// DB 스키마/목업 데이터 적재 — mysql CLI로 .sql 파일을 한 번에 실행한다.
// 커넥션 정보는 src/main/resources/application-local.properties(db.url/db.username/db.password)에서 읽는다.
// ---------------------------------------------------------------------------

def loadDbConnectionInfo() {
    def localPropsFile = file('src/main/resources/application-local.properties')
    if (!localPropsFile.exists()) {
        throw new GradleException(
                "src/main/resources/application-local.properties 파일이 없습니다. db.url/db.username/db.password를 설정하세요.")
    }
    def props = new Properties()
    localPropsFile.withInputStream { props.load(it) }

    def url = props.getProperty('db.url')
    def username = props.getProperty('db.username')
    def password = props.getProperty('db.password') ?: ''
    if (!url || !username) {
        throw new GradleException("application-local.properties에 db.url/db.username이 설정되어 있지 않습니다.")
    }

    def matcher = (url =~ /jdbc:mysql:\/\/([^:\/?]+)(?::(\d+))?\/([^?]+)/)
    if (!matcher.find()) {
        throw new GradleException("db.url 형식을 해석하지 못했습니다: ${url}")
    }
    return [
            host    : matcher.group(1),
            port    : matcher.group(2) ?: '3306',
            database: matcher.group(3),
            username: username,
            password: password,
    ]
}

def runSqlFile(File sqlFile) {
    if (!sqlFile.exists()) {
        throw new GradleException("SQL 파일이 없습니다: ${sqlFile}")
    }
    def db = loadDbConnectionInfo()
    logger.lifecycle("mysql 실행: ${sqlFile.name} -> ${db.database}@${db.host}:${db.port}")

    def processBuilder = new ProcessBuilder('mysql', '-h', db.host, '-P', db.port, '-u', db.username, db.database)
    processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT)
    processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT)
    if (db.password) {
        processBuilder.environment().put('MYSQL_PWD', db.password)
    }
    def process = processBuilder.start()
    sqlFile.withInputStream { input ->
        process.outputStream.withStream { output -> output << input }
    }
    def exitCode = process.waitFor()
    if (exitCode != 0) {
        throw new GradleException("${sqlFile.name} 실행이 실패했습니다 (exit code ${exitCode}).")
    }
}

tasks.register('dbMigrate') {
    group = 'database'
    description = '전체 스키마(jaedaero_db_v1.sql)를 로컬 DB에 재적용합니다. 기존 테이블을 DROP 후 재생성하므로 데이터가 모두 사라집니다.'
    doLast {
        runSqlFile(file('jaedaero_db_v1.sql'))
    }
}

tasks.register('dbSeed') {
    group = 'database'
    description = 'sql/seed/*.sql 목업 데이터를 정해진 순서로 모두 적재합니다. 반복 실행해도 안전하도록 작성된 스크립트들입니다.'
    doLast {
        // cohort_test_users.sql은 challenge_mission_mock_data.sql 선행 실행이 필요하다(파일 상단 주석 근거).
        def orderedSeedFiles = [
                'military_pay_policy.sql',
                'ai_coach_mock_data.sql',
                'challenge_mission_mock_data.sql',
                'cohort_test_users.sql',
                'user1_mypage_mock_data.sql',
        ]
        orderedSeedFiles.each { name ->
            runSqlFile(file("sql/seed/${name}"))
        }
    }
}

tasks.register('dbReset') {
    group = 'database'
    description = 'DDL 재생성(dbMigrate) 후 목업 데이터 적재(dbSeed)까지 한 번에 수행합니다.'
    dependsOn 'dbMigrate', 'dbSeed'
}
tasks.named('dbSeed') { mustRunAfter 'dbMigrate' }
